# qt6-opengl

./: CMakeLists.txt  README.md  main.cpp
